# a2_description

./: CMakeLists.txt  package.xml
config/: camera_info_real.yaml
launch/: display.launch.py  visualize.launch.py
mjcf/: a2.xml  scene_maze.xml
rviz/: default.rviz  navigation.rviz  robot.rviz
src/: a2_bridge.cpp  bridge.cpp
urdf/: a2.urdf
