<?xml version="1.0"?>
<package format="3">
  <name>a2_description</name>
  <version>0.0.1</version>
  <description>Unitree A2 robot models and scenes</description>
  <maintainer email="nileshbalu2002@gmail.com">niles</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>unitree_go</depend>
  <depend>unitree_hg</depend>
  <depend>unitree_api</depend>
  <depend>sensor_msgs</depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz2</exec_depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>